# Instagram-Graph-API

./: .env  .gitignore  LICENSE  README.md  alembic.ini  config.yml  docker-compose.yml  logging_production.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/development/versions/: 5a6cce653bd9_update_image_caption_table.py
alembic/production/: env.py
app/: main.py
app/container/: containers.py
app/infrastructure/aws/: s3.py
app/infrastructure/db/: database.py
app/infrastructure/meta/instagram_platform/: graph_api.py
app/models/common/: pagination.py
app/models/db/: image_publishing_metadata.py
app/models/schemas/: aws_s3.py  instagram.py
app/repositories/: base_repository.py  image_upload_history_repository.py  instagram_image_upload_history_repository.py
app/routes/api_v1/: api.py
app/routes/api_v1/endpoints/: auth.py  image.py  instagram.py
app/services/: base_service.py  image_upload_service.py  instagram_account_management.py  instagram_media_insights.py  instagram_media_upload_service.py
app/tests/: utils.py
app/tests/image_upload/: test_image_upload.py
dockerfiles/python311/: Dockerfile
