#################################################
# Project metadata
#################################################

[project]
requires-python = ">=3.8"
name = "fastapi-nano"
version = "0.1.0"
description = "CoreService for Sensay-AI created from A minimal FastAPI project template."
readme = "README.md"
keywords = ["fastapi", "template", "minimal", "docker", "cookiecutter"]
license = {file = "LICENSE"}
authors = [
    { name = "Minh Nguyen", email = "minh.nldang@gmail.com" },
    { name = "Tri Tran", email = "tri.trancongtoan@gmail.com" },
    { name = "Binh Pham", email = "bnh.quang@gmail.com" }
]

[project.urls]
Repository = "https://github.com/Sensay-AI/core-service"

#################################################
# Mypy config
#################################################

[tool.mypy]
follow_imports = "skip"
ignore_missing_imports = true
warn_no_return = true
warn_unused_ignores = true
allow_untyped_globals = true
allow_redefinition = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
pretty = true
exclude = ['build','venv','.venv','alembic/production/env.py']

[[tool.mypy.overrides]]
module = "app.tests.*"
ignore_errors = true

#################################################
# Ruff config
#################################################

[tool.ruff]
line-length = 88

# Enable Pyflakes `E` and `F` codes by default
select = ["E", "F", "I001", "PT", "C4"]
ignore = ["E501"]
respect-gitignore = true

per-file-ignores = {}

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.11
target-version = "py311"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10
max-complexity = 10

#################################################
# Pytest config
#################################################

[tool.pytest.ini_options]
addopts = "--strict-markers --maxfail 1 --cov src --no-header"
markers = """
    integration: mark a test as an integration test.
"""
console_output_style = "progress"

#################################################
# Setuptools config
#################################################

[tool.setuptools.packages.find]
where = ["app"]  # ["."] by default

[tool.poetry]
name = "fastapi-nano"
version = "0.1.0"
description = "CoreService for Sensay-AI created from A minimal FastAPI project template."
authors = [
    "minhnguyen <minh.nldang@gmail.com>",
    "Tri Tran <tri.trancongtoan@gmail.com>",
    "Binh Pham <bnh.quang@gmail.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bcrypt = "^4.2.1"
fastapi = "^0.115.6"
passlib = "^1.7.4"
python-multipart = "^0.0.20"
uvicorn = "^0.34.0"
gunicorn = "^23.0.0"
python-jose = "^3.3.0"
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
pyjwt = "^2.10.1"
singleton-decorator = "^1.0.0"
cryptography = "^44.0.0"
boto3 = "^1.35.90"
pillow = "^11.0.0"
boto3-type-annotations-with-docs = "^0.3.1"
dependency-injector = "^4.44.0"
pyyaml = "^6.0.2"
sentry-sdk = { version = "*", extras = ["fastapi"] }
tiktoken = "^0.8.0"
jinja2 = "^3.1.5"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
httpx = "^0.28.1"
mypy = "^1.14.0"
pip-tools = "^7.4.1"
pytest-cov = "^6.0.0"
ruff = "^0.8.4"
pytest = "^8.3.4"
requests = "^2.32.3"
pytest-asyncio = "^0.25.0"
alembic = "^1.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"